Compilador/src/gramatica.txt
GRAMATICA


Regra Bloco:
S -> BLOCO
BLOCO -> CMD BL
BL -> BLOCO | e
CMD -> [IF|FOR|WHILE|function|println|scanln|declaração|atribuição|FUNC_CALL|break|continue|return]

Regra string:
STRING -> '"' STRING_CONTENT '"'
STRING_CONTENT = e | CONTENT STRING_CONTENT
CONTENT -> (char | digit | symbol | space | '\n')

Regra OPERATION:

E -> T E' 
E' -> '+' T E' | '-' T E' | e
T -> F T'
T' -> '*' F T' | '/' F T' | e
F -> id | NUM | FUNC_CALL_IMP | (E)

Regra println:
PRIN -> 'println' '(' CONTENT VARS ')' ';'
CONTENT -> STRING 
VARS -> [ ',' ID ] VARS | e

Regra scanln:
SCAN -> 'scanln' '(' ID IDS ')' ';'
IDS -> ',' ID IDS | e

Regra Declaração:

DEC -> TYPE ':' DECLARATION
DECLARATION -> VAR | FUNC | MAIN
FUNC ->  'function' ID '(' PARAMETER ')' '{' Bloco_func'}'
FUNC_TYPE -> 'INT' | 'FLOAT' | 'VOID' | 'BOOL' | 'CHAR'
TYPE -> INT | FLOAT | BOOL | CHAR
PARAMETER -> TYPE ':' ID PARAMS | e
PARAMS -> ',' PARAMETER | e
VAR -> ID '=' (ID|VALUE) ';'
TYPE -> 'INT' | 'FLOAT' | 'CHAR' | 'BOOL'
VALUE -> integer | float | boolean | char | ID | FUNC_CALL_IMP | OPERATION

Regra Atibuição:
ATB -> ID OP_ATB ';'
OP_ATB -> COMP_OP  | SIMP_OP
COMP_OP -> ATB_TYPE COMP_OPTION
COMP_OPTION -> OPERATION | ID | func_call_imp | integer | floating_point | char | boolean
ATB_TYPE -> '+=' | '-=' | '*=' | '/=' | '=' 
SIMP_OP -> '++' | '--'

Regra if:


COND -> EXP_COMP LINKER
LINKER -> && COND | || COND

IF -> 'if' '(' COND ')' '{' Bloco '}' ELSE
ELSE -> 'else' ELSEIF | e
ELSEIF -> IF | '{' Bloco '}'
COND -> EXP_OU
EXP_OU -> EXP_E EXP_OUL
EXP_OUL -> '||' EXP_E EXP_OUL | e
EXP_E -> EXP_COMP EXP_EL
EXP_EL -> '&&' EXP_COMP EXP_EL
EXP_COMP -> (ID|NUM|TRUE|FALSE|OPERATION|FUNC_CALL_IMP) ( OP_COMP ) (ID|NUM|TRUE|FALSE|OPERATION|FUNC_CALL_IMP)
OP_COMP -> '>' | '<' | '<' '=' | '>''=' | '=''=' | '!''='  

Regra function:

FUNC ->  FUNC_TYPE ':' 'function' ID '(' PARAMETER ')' '{' Bloco RETORNO '}'
FUNC_TYPE -> 'INT' | 'FLOAT' | 'VOID' | 'BOOL' | 'CHAR'
TYPE -> INT | FLOAT | BOOL | CHAR
PARAMETER -> TYPE ':' ID PARAMS | e
PARAMS -> ',' PARAMETER| e
RETORNO -> 'return' (ID | integer | floating_point | char | bool) ';' | e

Regra while:

WHILE -> 'while' '(' WPARAMETER ')' '{' Bloco '}'
WPARAMETER -> OU_PAR
OU_PAR -> E_PAR OU_PARL
OU_PARL -> '||' E_PAR OU_PARL | e
E_PAR -> COMP_PAR E_PARL
E_PARL -> '&&' COMP_PAR E_PARL | e
COMP_PAR -> (ID|NUM|TRUE|FALSE|OPERATION) ( OP_COMP ) (ID|NUM|TRUE|FALSE|OPERATION)
OP_COMP -> '>' | '<' | '<=' | '>=' | '=''=' | '!='

Regra for :

FOR -> 'for' '(' COMPARATOR ';' COMPARATION ';' CHANGE ')' '{' Bloco '}'
COMPARATOR -> INT_DECLARATION | ID
INT_DECLARATION -> 'INT' ':' ID '=' INTEGER
COMPARATION -> ID ( OP_COMP ) (ID|NUM|TRUE|FALSE|OPERATION)
OP_COMP -> '>' | '<' | '<=' | '>=' | '=''=' | '!='
CHANGE -> ID OP_ATB
OP_ATB -> MATH_OP  | SIMP_OP
MATH_OP -> ATB_TYPE OPERATION
ATB_TYPE -> += | -= | *= | /= | =
SIMP_OP -> '++' | '--'

Regra FUNC_CALL:

CALL -> ID '(' ARGUMENT ')' ';'
ARGUMENT -> TYPE ':' ID ARGUMENTL | e
ARGUMENTL -> ',' TYPE ':' ID ARGUMENTL | e

Regra FUNC_CALL_IMP:

ICALL -> ID '(' ARGUMENT ')'
ARGUMENT -> TYPE ':' ID ARGUMENTL | e
ARGUMENTL -> ',' TYPE ':' ID ARGUMENTL | e 

Regra Main:

MAIN -> INT ':' 'function' 'MAIN' '(' ')' '{' BLOCO '}'
